2007-10-27  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: display line number when reporting
	  type error in conditional expression, fixes bug 478392

2007-10-27  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: ensure that new arrays own their
	  elements, fixes bug 488326

2007-10-27  Jürg Billeter  <j@bitron.ch>

	Update svn:ignore property.

2007-10-27  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/atk/, vapi/packages/gdk-2.0/, vapi/packages/gio-2.0/,
	  vapi/packages/gtk+-2.0/, vapi/packages/pango/: update to use
	  vala-gen-introspect

	* vapi/atk.vapi, vapi/gdk-2.0.vapi, vapi/gio-2.0.vapi,
	  vapi/gtk+-2.0.vapi, vapi/pango.vapi: regenerated

2007-10-27  Jürg Billeter  <j@bitron.ch>

	* vapigen/valavapigen.vala: fix .deps file handling

2007-10-27  Jürg Billeter  <j@bitron.ch>

	* configure.ac, vapigen/Makefile.am, vapigen/gidlgen/Makefile.am,
	  vapigen/gidlgen/vala-gen-introspect.in, vapigen/vala-gen-introspect/:
	  rename gidlgen subdirectory to vala-gen-introspect

2007-10-26  Jürg Billeter  <j@bitron.ch>

	* configure.ac, doc/Makefile.am, doc/gidlgen.1,
	  doc/vala-gen-introspect.1, doc/vapigen.1, vapigen/gidlgen/Makefile.am,
	  vapigen/gidlgen/gapi2xml.pl, vapigen/gidlgen/gapi_pp.pl,
	  vapigen/gidlgen/gidlgen.in, vapigen/gidlgen/vala-gen-introspect.in,
	  vapigen/valagidlparser.vala: replace perl scripts by gen-introspect,
	  rename gidlgen to vala-gen-introspect

2007-10-26  Jürg Billeter  <j@bitron.ch>

	* configure.ac, gobject-introspection/Makefile.am,
	  gobject-introspection/clexer.l, gobject-introspection/cparser.y,
	  gobject-introspection/gen-introspect.c,
	  gobject-introspection/gen-introspect.h: add gen-introspect from
	  gobject-introspection git

2007-10-19  Jürg Billeter  <j@bitron.ch>

	* gobject-introspection/gidlnode.c, gobject-introspection/gidlparser.c:
	  update from gobject-introspection SVN

2007-10-19  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add stub for GData
